confluence/confluence-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: confluence-server
  labels:
    app: confluence
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: confluence
  template:
    metadata:
      labels:
        app: confluence
        component: server
    spec:
      securityContext:
        fsGroup: 2002
      containers:
        - name: confluence
          image: "atlassian/confluence-server:6.15.9"
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
            - name: synchrony
              containerPort: 8091
              protocol: TCP
#          livenessProbe:
#            tcpSocket:
#              port: http
#            initialDelaySeconds: 60
#            periodSeconds: 15
#            timeoutSeconds: 3
#          readinessProbe:
#            tcpSocket:
#              port: http
#            initialDelaySeconds: 30
#            periodSeconds: 15
#            timeoutSeconds: 3
          volumeMounts:
            - mountPath: /var/atlassian/application-data/confluence
              name: data
            - mountPath: /opt/atlassian/confluence/work
              name: temp
            - mountPath: /opt/atlassian/confluence/temp
              name: temp
            - mountPath: /opt/atlassian/confluence/logs
              name: temp
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 2
              memory: 2.5Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: confluence-data
        - name: temp
          emptyDir: {}
