confluence/confluence-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: confluence
  labels:
    app: confluence
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: proxy-tls
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: https
      protocol: TCP
      name: https
    - port: 8091
      targetPort: synchrony
      protocol: TCP
      name: synchrony
  selector:
    app: confluence
    component: server
