confluence/confluence-app-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 10m
  labels:
    app: confluence
    component: server
  name: confluence
spec:
  host: docs.wheel.sh
  path: /
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    # termination: reencrypt
    termination: edge
  to:
    kind: Service
    name: confluence
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - routerName: router
