confluence/confluence-synchrony-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 10m
  labels:
    app: confluence
  name: confluence-synchrony
spec:
  host: docs.wheel.sh
  path: /synchrony-proxy
  port:
    targetPort: synchrony
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: confluence
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - routerName: router
